--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/ui": "^4.5",
         "livewire/livewire": "^3.5",
         "maatwebsite/excel": "^3.1",
-        "mindscms/laravelshoppingcart": "^2.1"
+        "mindscms/laravelshoppingcart": "^2.1",
+        "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
